--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: '0 23 * * *' # Auto build Docker at 23.00 every day
+    - cron: '0 16 * * *' # Auto build Docker every midnight
 jobs:
   build:
     runs-on: ubuntu-latest
